--- a/.env
+++ b/.env
@@ -7,3 +7,10 @@
 DATABASE_URL="mongodb+srv://jweb:N268MVBQkKMOQpBV@cluster0.umbhyiz.mongodb.net/test"
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
 NEXTAUTH_SECRET="NEXT-SECRET"
+
+GITHUB_ID=337b3669ebbc700b4496
+GITHUB_SECRET=56fd2eb0edd460acf4e4e6e0c5073d50b72b9526
+
+GOOGLE_CLIENT_D=
+GOOGLE_CLIENT_SECRET=
+
