--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ DATABASE_URL="mongodb+srv://jweb:N268MVBQkKMOQpBV@cluster0.umbhyiz.mongodb.net/t
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
 NEXTAUTH_SECRET="NEXT-SECRET"
 
+GOOGLE_CLIENT_ID=803741910999-bl8em6qjp4n9qpha1f851brndb72ne3j.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+
 GITHUB_ID=337b3669ebbc700b4496
 GITHUB_SECRET=56fd2eb0edd460acf4e4e6e0c5073d50b72b9526
-
-GOOGLE_CLIENT_D=
-GOOGLE_CLIENT_SECRET=
-
